# umbrix-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_tests.py
.github/workflows/: docker.yml  publish.yml  test.yml
scripts/: publish.sh
src/umbrix_mcp/: __init__.py  server.py
tests/: __init__.py  test_cli.py  test_enhanced_tools.py  test_server.py
