[project]
name = "umbrix-mcp"
version = "0.1.0"
description = "MCP server for Umbrix CTI platform - AI-powered threat intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Umbrix Team", email = "support@umbrix.dev"}
]
keywords = ["mcp", "cti", "threat-intelligence", "security", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.9.4",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pylint>=3.3.7",
    "black>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
umbrix-mcp = "umbrix_mcp.server:main"

[project.urls]
Homepage = "https://umbrix.dev"
Documentation = "https://umbrix.dev/docs"
Repository = "https://github.com/umbrix/umbrix-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/umbrix_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
